# cobol-py

./: .gitignore  Cobol.g4  Cobol85.g4  CobolPreprocessor.g4  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 一致性确认.md
examples/: example.cbl  example_merged.cbl
scripts/: batch_parse_nist.py  dump_parse_trees.py  generate_parser.py
src/cobol_py/: Cobol85Lexer.py  Cobol85Listener.py  Cobol85Parser.py  Cobol85Visitor.py  CobolLexer.py  CobolListener.py  CobolParser.py  CobolPreprocessorLexer.py  CobolPreprocessorListener.py  CobolPreprocessorParser.py  CobolPreprocessorVisitor.py  CobolVisitor.py  __init__.py  _antlr_patch.py  _treeutil.py  error_listener.py  exceptions.py  params.py  runner.py
src/cobol_py/asg/: __init__.py  antlr_utils.py  base.py  call.py  communication.py  data.py  environment.py  factory.py  identification.py  literal.py  mainframe.py  program.py  registry.py  resolver.py  util_string.py  valuestmt.py  visitor.py
src/cobol_py/asg/procedure/: __init__.py  division.py  statements.py
src/cobol_py/preprocessor/: __init__.py  comment_entries_marker.py  constants.py  copybook.py  document_context.py  document_parser.py  document_parser_listener.py  hidden_token_collector.py  inline_comment_entries_normalizer.py  line.py  line_indicator_processor.py  line_reader.py  line_writer.py  preprocessor.py  replacement_mapping.py  string_utils.py  token_utils.py
src/cobol_py/util/: __init__.py  filename_utils.py  string_utils.py
tests/: conftest.py  test_ast_tree.py  test_nist.py  test_parse.py  test_phase1_leaf.py  test_phase2_line.py  test_preprocessor.py
tests/fixtures/: MYCOPY.CPY  copy_main.cbl  exec_cics.cbl  exec_sql.cbl  free.cbl  hello.cbl  replace.cbl  tandem.cbl  variable.cbl
tests/test_asg/: conftest.py  test_arithmetic.py  test_c2_tail.py  test_data.py  test_declaratives.py  test_environment.py  test_file_verbs.py  test_foundation.py  test_more_verbs.py  test_phrase_scopes.py  test_procedure.py  test_read_call_correctness.py  test_statements.py  test_string_table_verbs.py  test_write_rewrite_start.py
tests/testdata/gov/nist/: CM101M.CBL.tree  CM102M.CBL.tree  CM103M.CBL.tree  CM104M.CBL.tree  CM105M.CBL.tree  CM201M.CBL.tree  CM202M.CBL.tree  CM303M.CBL.tree  CM401M.CBL.tree  DB101A.CBL.tree  DB102A.CBL.tree  DB103M.CBL.tree  DB104A.CBL.tree  DB105A.CBL.tree  DB201A.CBL.tree  DB202A.CBL.tree  DB203A.CBL.tree  DB204A.CBL.tree  DB205A.CBL.tree  DB301M.CBL.tree  DB302M.CBL.tree  DB303M.CBL.tree  DB304M.CBL.tree  DB305M.CBL.tree  EXEC85.CBL.tree  IC101A.CBL.tree  IC102A.CBL.tree  IC103A.CBL.tree  IC104A.CBL.tree  IC105A.CBL.tree  IC106A.CBL.tree  IC107A.CBL.tree  IC108A.CBL.tree  IC109A.CBL.tree  IC110A.CBL.tree  IC111A.CBL.tree  IC112A.CBL.tree  IC113A.CBL.tree  IC114A.CBL.tree  IC115A.CBL.tree  (+421 more)
tests/testdata/io/proleap/cobol/ast/fixed/: ExecSqlEmptyLine.cbl.tree  ExecSqlReplaceToken.cbl.tree  LineContinuationMixed.cbl.tree  ProgramIdCommentEntry.cbl.tree  ProgramIdNoDot.cbl.tree  QuotesInCommentEntry.cbl.tree  Security.cbl.tree
tests/testdata/io/proleap/cobol/ast/tandem/: CommaSpace.cbl.tree  ComputeStatement.cbl.tree  ComputeStatementInTable.cbl.tree  Condition.cbl.tree  ConditionInAnd.cbl.tree  ConditionInOr.cbl.tree  ConditionNameSubscript.cbl.tree  ConditionNot.cbl.tree  ConditionNotInAnd.cbl.tree  ConditionNotInOr.cbl.tree  Evaluate.cbl.tree  InlineComment.cbl.tree  Tandem.cbl.tree  (+3 more)
(+25 files in other folders)
